# gfmodules-generieke-issuer-revocatie-api

./: Caddyfile  README.md  app.conf.autopilot  app.conf.example  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  release-package-venv.yaml  release-package.yaml
app/: application.py  config.py  container.py  gen_jwk.py  stats.py
app/db/: __init__.py  db.py  decorator.py  models.py  session.py
app/db/repositories/: revocations.py
app/routers/: allocation.py  bitstring.py  default.py  health.py  revocation.py
app/services/: allocation_service.py  bitstring.py  credential_generator.py  revokation_service.py
docker/: Dockerfile  httpd-ssl.conf  httpd.conf  init.sh
sql/: 000-initial.sql  001-revocation-allocation.sql
tests/: conftest.py  test_allocation.py  test_bitstring.py  test_config.py  test_revocation.py
tools/: generate_certs.sh  migrate_db.sh
