[tool.poetry]
name = "gfmodules-generieke-issuer-revocatie-api"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-generieke-issuer-revocatie-api-private"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.40.0"
fastapi = "^0.129.0"
mypy = "^1.19.1"
inject = "^5.2.0"
opentelemetry-sdk = "^1.34.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.34.0"
opentelemetry-instrumentation = "^0.60b1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-requests = "^0.60b1"
requests = "^2.32.0"
statsd = "^4.0.1"
poetry-core = "^2.3.0"
pydantic-settings = "^2.13.0"
redis = "^7.1.1"
urllib3 = "^2.6.3"
sqlalchemy = "^2.0.45"
psycopg = "^3.3.2"
pyjwt = "^2.10.1"
cryptography = "^46.0.5"
base58 = "^2.1.1"
multiformats = "^0.3.1.post4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
ruff = "0.15.1"
pip-audit = "^2.10.0"
codespell = "^2.4.1"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]
line-length = 120

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]
